# articwake

./: .envrc.example  .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
alpine-image/: README.txt  build-overlay.sh  config.env.example  unattended.sh  usercfg.txt  wifi.conf.example
alpine-image/overlay/etc/: issue
alpine-image/overlay/etc/init.d/: articwake-setup
alpine-image/overlay/etc/local.d/: articwake-setup.start
alpine-image/overlay/etc/profile.d/: articwake-autorun.sh
alpine-image/overlay/etc/runlevels/default/: articwake-setup
docs/: astro.config.mjs  package-lock.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/api/: auth.mdx  overview.mdx  status.mdx  unlock.mdx  wol.mdx
docs/src/content/docs/development/: architecture.mdx  building.mdx  contributing.mdx  testing.mdx
docs/src/content/docs/getting-started/: installation.mdx  quick-start.mdx
docs/src/content/docs/guides/: configuration.mdx  sd-card-setup.mdx  tailscale.mdx  web-ui.mdx  wifi-setup.mdx
docs/src/content/docs/homelab/: luks-dropbear.mdx  ssh-keys.mdx  wol.mdx
docs/src/content/docs/reference/: cli.mdx  environment.mdx  security.mdx  troubleshooting.mdx
docs/src/styles/: custom.css
src/: auth.rs  config.rs  lib.rs  main.rs
src/api/: auth.rs  mod.rs  status.rs  unlock.rs  wol.rs
src/services/: mod.rs  network.rs  ssh.rs  wol.rs
src/static/: app.js  index.html
tests/: api_integration.rs
