[package]
name = "articwake"
version = "0.1.0"
edition = "2024"
description = "Remote Wake-on-LAN and LUKS unlock service for homelab"
license = "MIT"
default-run = "articwake"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
russh = "0.57"
russh-keys = "0.49"
wake-on-lan = "0.2"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
rust-embed = "8"
mime_guess = "2"
hex = "0.4"

[dev-dependencies]
actix-rt = "2"
tempfile = "3"
